--- a/templates/rankings/index.html
+++ b/templates/rankings/index.html
@@ -1,16 +1,15 @@
-{% extends 'app/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <div class="col-sm-12 col-md-12">
-        <div class="page-header">
-            <h2>Table Tennis Rankings</h2>
-        </div>
-    </div>
-
-    <div class="col-sm-12 col-md-12">
-        <a href="#" class="btn btn-primary btn-lg btn-block" role="button">Create Group</a>
-        <a href="#" class="btn btn-primary btn-lg btn-block" role="button">Login/Sign-Up</a>
-        <a href="#" class="btn btn-primary btn-lg btn-block" role="button">View Groups</a>
-        <a href="#" class="btn btn-primary btn-lg btn-block" role="button">View Leaderboard</a>
+    <div class="col-sm-12 col-md-6 col-md-offset-3">
+        {% if user.is_authenticated %}
+            <a href="{% url 'player_profile' user.player.pk %}" class="btn btn-primary btn-lg btn-block" role="button">View Profile</a>
+            <a href="{% url 'ranking_logout' %}" class="btn btn-primary btn-lg btn-block" role="button">Logout</a>
+        {% else %}
+            <a href="{% url 'ranking_login' %}" class="btn btn-primary btn-lg btn-block" role="button">Login</a>
+            <a href="{% url 'ranking_register' %}" class="btn btn-primary btn-lg btn-block" role="button">Register</a>
+        {% endif %}
+        <a href="{% url 'groups' %}" class="btn btn-primary btn-lg btn-block" role="button">View Groups</a>
+        <a href="{% url 'create_group' %}" class="btn btn-primary btn-lg btn-block" role="button">Create Group</a>
     </div>
 {% endblock %}
