--- a/templates/rankings/players/player.html
+++ b/templates/rankings/players/player.html
@@ -45,17 +45,42 @@
 
         <div class="row">   
             <h4>Active Games</h4>
-            {% if players %}
+            {% if active_games %}
                 <table class="table table-bordered table-striped">
-                    {% for game in games %}
+                    {% for game in active_games %}
                         <tr>
-                            <td>{{ game }}</td>
+                            <td>
+                                <a href="{% url 'game' group.pk game.pk %}">
+                                    {{ game }}
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </table>
             {% else %}
                 <p>
-                    There are no games, please start one in your chosen group.
+                    There are no active games, please start one in your chosen group.
+                </p>
+            {% endif %}
+        </div>
+
+        <div class="row">   
+            <h4>Completed Games</h4>
+            {% if completed_games %}
+                <table class="table table-bordered table-striped">
+                    {% for game in completed_games %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'game' group.pk game.pk %}">
+                                    {{ game }}
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% else %}
+                <p>
+                    You haven't played in any games yet, any completed match will show up here.
                 </p>
             {% endif %}
         </div>
