--- a/templates/rankings/players/player.html
+++ b/templates/rankings/players/player.html
@@ -47,11 +47,11 @@
             <h4>Active Games</h4>
             {% if active_games %}
                 <table class="table table-bordered table-striped">
-                    {% for game in active_games %}
+                    {% for item in active_games %}
                         <tr>
                             <td>
-                                <a href="{% url 'game' group.pk game.pk %}">
-                                    {{ game }}
+                                <a href="{% url 'game' item.group.pk item.game.pk %}">
+                                    {{ item.game }}
                                 </a>
                             </td>
                         </tr>
@@ -68,11 +68,11 @@
             <h4>Completed Games</h4>
             {% if completed_games %}
                 <table class="table table-bordered table-striped">
-                    {% for game in completed_games %}
+                    {% for item in completed_games %}
                         <tr>
                             <td>
-                                <a href="{% url 'game' group.pk game.pk %}">
-                                    {{ game }}
+                                <a href="{% url 'game' item.group.pk item.game.pk %}">
+                                    {{ item.game }}
                                 </a>
                             </td>
                         </tr>
