--- a/templates/rankings/groups/groups.html
+++ b/templates/rankings/groups/groups.html
@@ -11,29 +11,37 @@
 {% block content %}
     <div class="col-sm-12 col-md-6 col-md-offset-3">
         <table class="table table-bordered table-striped">
-            {% for group in groups %}
+            <thead>
                 <tr>
-                    <td>
-                        <a href="{% url 'group' group.pk %}">
-                            {{ group.name }}
-                        </a>
-                    </td>
-                    {% if request.user.player not in group.players.all %}
-                        <td class="action-column text-center">
-                            <a href="{% url 'join_group' group.pk %}">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true" aria-label="Join group"></span>
-                            </a>                                
+                    <th colspan="3">Groups</th>
+                </tr>    
+            </thead>
+
+            <tbody>
+                {% for group in groups %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'group' group.pk %}">
+                                {{ group.name }}
+                            </a>
                         </td>
-                    {% endif %}
-                    {% if request.user.player in group.admins.all %}
-                        <td class="action-column text-center">
-                            <a href="{% url 'edit_group' group.pk %}">
-                                Edit <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true" aria-label="group"></span>    
-                            </a>                                
-                        </td>
-                    {% endif %}
-                </tr>
-            {% endfor %}
+                        {% if request.user.player not in group.players.all %}
+                            <td class="action-column text-center">
+                                <a href="{% url 'join_group' group.pk %}">
+                                    <span class="glyphicon glyphicon-plus" aria-hidden="true" aria-label="Join group"></span>
+                                </a>                                
+                            </td>
+                        {% endif %}
+                        {% if request.user.player in group.admins.all %}
+                            <td class="action-column text-center">
+                                <a href="{% url 'edit_group' group.pk %}">
+                                    <span class="glyphicon glyphicon-pencil pull-right" aria-hidden="true" aria-label="Edit group"></span>
+                                </a>                                
+                            </td>
+                        {% endif %}
+                    </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 {% endblock %}
