--- a/templates/rankings/groups/game.html
+++ b/templates/rankings/groups/game.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 
 {% block page_header %}
     <a href="{% url 'group' group.pk %}">
@@ -12,8 +13,9 @@
 
 {% block content %}
     <div class="col-sm-12 col-md-6 col-md-offset-3">
-
         <div class="row">
+
+            <h3>Game {{ game.pk }} {{ game.date_time|localtime }}</h3>
             <h4>Players</h4>
             <table class="table table-bordered table-striped">
                 <thead>
