--- a/templates/rankings/groups/game.html
+++ b/templates/rankings/groups/game.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load tz %}
 
 {% block page_header %}
     <a href="{% url 'group' group.pk %}">
@@ -15,7 +14,7 @@
     <div class="col-sm-12 col-md-6 col-md-offset-3">
         <div class="row">
 
-            <h3>Game {{ game.pk }} {{ game.date_time|localtime }}</h3>
+            <h3>Game {{ game.pk }} {{ game.date_time }}</h3>
             <h4>Players</h4>
             <table class="table table-bordered table-striped">
                 <thead>
