Add tournament support to site.
- Tournaments are independent of groups and all players can join.
- Tournaments can have round robin phases and elimination phases or both.
- When round robin finishes, elimination rounds start if it was specified
  the tournament was created.
- Tournaments can only be created from the admin panel.
- Tournaments need an even number of players.
- Tournaments do not affect rankings of players.

--- a/templates/rankings/index.html
+++ b/templates/rankings/index.html
@@ -10,5 +10,6 @@
             <a href="{% url 'ranking_register' %}" class="btn btn-primary btn-lg btn-block" role="button">Register</a>
         {% endif %}
         <a href="{% url 'groups' %}" class="btn btn-primary btn-lg btn-block" role="button">View Groups</a>
+        <a href="{% url 'tournaments' %}" class="btn btn-primary btn-lg btn-block" role="button">View Tournaments</a>
     </div>
 {% endblock %}
